implements : db and handling for levels
	1.Creates a json file to store levels, php script to handle them
	2.Creates a Level class to handle the db(json file)
	3.Implements basic CRUD operations on level object
	...while read operation the time_stamp is not read as of now
	4.Handles ObjectNotFound Exceptions
		for read, update and delete operations

--- a/game.html
+++ b/game.html
@@ -627,11 +627,39 @@
                 }
             ]
         );
+
+        $.ajax({
+            url: 'levels.php',
+            type: 'POST',
+//            data: {
+//                q: "c",
+//                name: "ben<>df()",
+//                author: "10()<>",
+//                data: "alienf force~'\"()<>"
+//            },
+//            data: {
+//                q: "d",
+//                pk: "100",
+//            },
+//            data: {
+//                q: "u",
+//                pk: "4",
+//                name: "ben",
+//                author: "10",
+//                data: "alien force"
+//            },
+            error: function () {
+              alert('error')
+            },
+            success: function (r) {
+                console.log(r)
+            }
+        })
     });
 
 </script>
 <div class="">
-    <div id="universe" class="teal" style="width: 100vw;height: 100vh;"></div>
+    <div id="universe" class="grey lighten-2" style="width: 100vw;height: 100vh;"></div>
 </div>
 </body>
 </html>
